--- a/apps/store/templates/parts/product_manage_list.html
+++ b/apps/store/templates/parts/product_manage_list.html
@@ -1,29 +1,30 @@
 <div class="columns is-multiline">
-    {% for p in list_products %}
-        <div class="column is-3">
-            <div class="card">
-                <div class="card-image">
-                    <figure class="image">
-                        <img src="{{ p.get_thumbnail }}">
-                    </figure>
-                </div>
-                
-                <div class="card-content">
-                    <div class="media">
-                        <div class="media-content">
-                            <p class="title is-4">{{ p.title }}</p>
-                            <p class="subtitle is-6">${{ p.price }}</p>
-                            <p class="subtitle is-6">x{{ p.num_available }}</p>
+        {% for p in list_products %}
+            <div class="column is-3">
+                <div class="card">
+                    <div class="card-image">
+                        <figure class="image">
+                            <img src="{{ p.get_thumbnail }}">
+                        </figure>
+                    </div>
+
+                    <div class="card-content">
+                        <div class="media">
+                            <div class="media-content">
+                                <p class="title is-4">ID:{{ p.id }}</p>
+                                <p class="title is-4">{{ p.title }}</p>
+                                <p class="subtitle is-6">${{ p.price }}</p>
+                                <p class="subtitle is-6">x{{ p.num_available }}</p>
+                            </div>
                         </div>
                     </div>
+    
+                    <footer class="card-footer">
+                        <a href="{% url 'editProduct' p.pk %}" class="edit-button">Edit </a>
+                        <a href="{% url 'deleteProduct' p.pk %}" class="edit-button"> Delete </a>
+                        <a href="{% url 'product_detail' p.category.slug p.slug %}" class="card-footer-item">View</a>
+                    </footer>
                 </div>
-
-                <footer class="card-footer">
-                    <a href="{% url 'editProduct' p.pk %}" class="edit-button">Edit </a>
-                    <a href="{% url 'deleteProduct' p.pk %}" class="edit-button"> Delete </a>
-                    <a href="{% url 'product_detail' p.category.slug p.slug %}" class="card-footer-item">View</a>
-                </footer>
             </div>
-        </div>
-    {% endfor %}
-</div>
+        {% endfor %}
+    </div>
