--- a/apps/core/templates/frontpage.html
+++ b/apps/core/templates/frontpage.html
@@ -3,7 +3,7 @@
 {% block title %}Welcome | {% endblock %}
 
 {% block content %}
-    <h2 class="subtitle has-text-centered">Featured products</h2>
+    {% comment %} <h2 class="subtitle has-text-centered">Featured products</h2> {% endcomment %}
     
     {% with products as list_products %}
         {% include 'parts/product_list.html' %}
@@ -11,7 +11,7 @@
 
     <hr>
 
-    <div class="featured-categories">
+    {% comment %} <div class="featured-categories">
         {% for category in featured_categories %}
             <h2 class="subtitle has-text-centered">{{ category.title }}</h2>
         
@@ -19,9 +19,9 @@
                 {% include 'parts/product_list.html' %}
             {% endwith %}    
         {% endfor %}
-    </div>
+    </div> {% endcomment %}
 
-    <h2 class="subtitle has-text-centered">Popular products</h2>
+    {% comment %} <h2 class="subtitle has-text-centered">Popular products</h2>
         
     {% with popular_products as list_products %}
         {% include 'parts/product_list.html' %}
@@ -31,5 +31,5 @@
         
     {% with recently_viewed_products as list_products %}
         {% include 'parts/product_list.html' %}
-    {% endwith %}  
+    {% endwith %}   {% endcomment %}
 {% endblock %}
