change product displaying and delete newsletter

--- a/apps/core/templates/base.html
+++ b/apps/core/templates/base.html
@@ -79,7 +79,7 @@
             {% endblock %}
 		</section>
 
-		{% include 'parts/newsletter.html' %}
+		{% comment %} {% include 'parts/newsletter.html' %} {% endcomment %}
 
 		<footer class="footer">
 			<div class="columns">
