--- a/apps/userprofile/templates/myaccount.html
+++ b/apps/userprofile/templates/myaccount.html
@@ -27,7 +27,7 @@
             </div>
 
             <div class="message-body">
-                <table class="table is-striped is-fullwidth">
+                <table class="table"> {% comment %}本来table后面还有 is-striped is-fullwidth{% endcomment %}
                     <thead>
                         <tr>
                             <th>Title</th>
