--- a/apps/core/templates/delete_product.html
+++ b/apps/core/templates/delete_product.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'managerBase.html' %}
 {% block content %}
 <form action="" method="post">{% csrf_token %}
 <p>Are you sure you want to delete"{{product.title}}"?</p>
