--- a/apps/core/templates/edit_product.html
+++ b/apps/core/templates/edit_product.html
@@ -1,4 +1,4 @@
-{% extends 'base.html'%}
+{% extends 'managerBase.html'%}
 {% block content %}
 <h1>Edit Product</h1>
 <form method="POST" action="">{% csrf_token %}
