--- a/apps/userprofile/templates/myaccount.html
+++ b/apps/userprofile/templates/myaccount.html
@@ -27,10 +27,12 @@
             <div class="message-header">
                 <p>Order ID: {{ order.id }}</p>
                 <p>Created time: {{ order.created_at }}</p>
+                <p><strong>Address: </strong>{{ request.user.userprofile.address }}</p>  {# Add this line to display the order address #}
                 <p><strong>Status: </strong>{{ order.status }}</p>
             </div>
 
             <div class="message-body">
+                
                 <table class="table"> {% comment %}本来table后面还有 is-striped is-fullwidth{% endcomment %}
                     <thead>
                         <tr>
