--- a/apps/core/templates/edit_product.html
+++ b/apps/core/templates/edit_product.html
@@ -1,7 +1,7 @@
 {% extends 'managerBase.html'%}
 {% block content %}
 <h1>Edit Product</h1>
-<form method="POST" action="">{% csrf_token %}
+<form method="POST" action="" enctype="multipart/form-data">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Save">
 </form>
