A separate interface for user orders

--- a/apps/userprofile/templates/myaccount.html
+++ b/apps/userprofile/templates/myaccount.html
@@ -20,52 +20,9 @@
 
     <hr>
 
-    <h2 class="subtitle">My orders</h2>
+    <a href="{% url 'user_order_list' %}">
+        <h2 class="button is-hovered">My orders</h2>
+    </a>
 
-    {% for order in request.user.orders.all|dictsortreversed:"created_at" %}
-        <article class="message is-light">
-            <div class="message-header">
-                <p>Order ID: {{ order.id }}<br>
-                   Created time: {{ order.created_at }}<br>
-                   Address: {{ order.user.userprofile.address }}<br>
-                   Status: {{ order.status }}
-                 </p>
-            </div>
-
-            <div class="message-body">
-                
-                <table class="table"> {% comment %}本来table后面还有 is-striped is-fullwidth{% endcomment %}
-                    <thead>
-                        <tr>
-                            <th>Title</th>
-                            <th>Quantity</th>
-                            <th>Price</th>
-                        </tr>
-                    </thead>
-
-                    <tbody>
-                        {% for item in order.items.all %}
-                            <tr>
-                                <td><a href="{{ item.product.title }}">
-                                        {{ item.product.title }}
-                                    </a></td>
-                                <td>{{ item.quantity }}</td>
-                                <td>{{ item.price }}</td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-
-                    <tfoot>
-                        <tr>
-                            <td>Total</td>
-                            <td>{{ order.get_total_quantity }}</td>
-                            <td>{{ order.paid_amount }}</td>
-                        </tr>
-                    </tfoot>
-                </table>
-            </div>
-        </article>
-    {% empty %}
-        <p>You don't have any order yet...</p>
-    {% endfor %}
+    
 {% endblock %}
