--- a/apps/core/templates/product.html
+++ b/apps/core/templates/product.html
@@ -12,7 +12,18 @@
                  {% endfor %}
              </div>
          </div> -->
-
+         <div class="navbar-item">
+						<form method="get" action="{% url 'searchManage' %}">
+							<div class="field has-addons">
+								<div class="control">
+									<input type="text" class="input" placeholder="Search..." name="query">
+								</div>
+								<div class="control">
+									<button class="button is-success">Search</button>
+								</div>
+							</div>
+						</form>
+             </div>
          <div class = "columns is-multiline" >
             {% for product in products %}
                 <div class="column is-3">
@@ -22,6 +33,7 @@
                               <div class="media-content">
                                   <img src="{{ product.image.url }}" alt="test" width="200" height="300">
                                  <p class="title is-4">{{ product.title }}</p>
+                                  <p class="title is-4">id: {{ product.id }}</p>
                                  <p class="subtitle is-6">{{ product.price }}</p>
                                  <a href="{% url 'editProduct' product.pk %}" class="edit-button">Edit</a>
                                  <a href="{% url 'deleteProduct' product.pk %}" class="edit-button">Delete</a>
