--- a/apps/core/templates/order_list.html
+++ b/apps/core/templates/order_list.html
@@ -1,5 +1,11 @@
 {% extends 'managerBase.html' %}
 {% block content %}
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
     <h1 class="title">All orders</h1>
     <hr>
     {% comment %} <table>
@@ -33,21 +39,26 @@
     {% for order in orders|dictsortreversed:"created_at" %}
         <article class="message is-light">
             <div class="message-header">
-                <p>Order ID: {{ order.id }}<br>
+                <h4>Order ID: {{ order.id }}<br>
                    Created time: {{ order.created_at }}<br>
                    User name: {{ order.user.username }}<br>
                    Address: {{ order.user.userprofile.address }}<br>
-                   Status: {{ order.status }}
-                </p>
+                   Status: {{ order.status }}<br>
+                    Total amount: {{ order.paid_amount }}
+                </h4>
+                <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#collapse{{order.id}}"
+                        aria-expanded="false" data-subject="{{order.id}}" aria-controls="collapse{{order.id}}">View Order Detail</button>
             </div>
 
             <div class="message-body">
-                
+                 <div id="collapse{{order.id}}" class="collapse" aria-labelledby="heading{{order.id}}"
+                      aria-expanded="false">
                 <table class="table"> {% comment %}本来table后面还有 is-striped is-fullwidth{% endcomment %}
                     <thead>
                         <tr>
                             <th>Title</th>
                             <th>Quantity</th>
+                            <th>Unit Price</th>
                             <th>Price</th>
                         </tr>
                     </thead>
@@ -60,6 +71,7 @@
                                     </a></td>
                                 <td>{{ item.quantity }}</td>
                                 <td>{{ item.price }}</td>
+                                <td>{{ item.subtotal}}</td>
                             </tr>
                         {% endfor %}
                     </tbody>
@@ -68,6 +80,7 @@
                         <tr>
                             <td>Total</td>
                             <td>{{ order.get_total_quantity }}</td>
+                            <td> </td>
                             <td>{{ order.paid_amount }}</td>
                         </tr>
                     </tfoot>
