--- a/apps/userprofile/templates/signup.html
+++ b/apps/userprofile/templates/signup.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
-
+{% load i18n %}
 {% block content %}
 <div class="columns">
     <div class="column is-6 is-offset-3">
-        <h1 class="title">Sign up</h1>
+        <h1 class="title">{% trans 'Sign up' %}</h1>
 
         <form method="post" action=".">
             {% csrf_token %}
@@ -14,7 +14,7 @@
     
             <div class="field">
                 <div class="control">
-                    <button class="button is-success">Sign up</button>
+                    <button class="button is-success">{% trans 'Sign up' %}</button>
                 </div>
             </div>
         </form>
